[gd_scene load_steps=20 format=3 uid="uid://bma34f5671vn"]

[ext_resource type="Script" uid="uid://dqq6hgkulk2oa" path="res://scripts/red_slime.gd" id="1_jhcl7"]
[ext_resource type="Texture2D" uid="uid://cibbvghmfg66k" path="res://assets/sprites/slime_purple.png" id="2_dp2bf"]
[ext_resource type="PackedScene" uid="uid://dnj53nu7bcbhd" path="res://scenes/projectile.tscn" id="2_jhcl7"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0pvn7"]
friction = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8l41y"]
atlas = ExtResource("2_dp2bf")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys1d1"]
atlas = ExtResource("2_dp2bf")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsp21"]
atlas = ExtResource("2_dp2bf")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb02b"]
atlas = ExtResource("2_dp2bf")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq7mf"]
atlas = ExtResource("2_dp2bf")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2e51"]
atlas = ExtResource("2_dp2bf")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_se54y"]
atlas = ExtResource("2_dp2bf")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2mfa"]
atlas = ExtResource("2_dp2bf")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oet6w"]
atlas = ExtResource("2_dp2bf")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fydep"]
atlas = ExtResource("2_dp2bf")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgt3n"]
atlas = ExtResource("2_dp2bf")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlgir"]
atlas = ExtResource("2_dp2bf")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_e30mu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l41y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys1d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsp21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb02b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq7mf")
}],
"loop": true,
"name": &"Aggressive Idle",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2e51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se54y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2mfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oet6w")
}],
"loop": true,
"name": &"Angry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2mfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq7mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fydep")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fydep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgt3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq7mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlgir")
}],
"loop": true,
"name": &"Wake Up",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pvn7"]
size = Vector2(8, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4q1e0"]
size = Vector2(10, 10)

[node name="Red Slime" type="StaticBody2D" groups=["Enemy"]]
position = Vector2(0, -5)
physics_material_override = SubResource("PhysicsMaterial_0pvn7")
script = ExtResource("1_jhcl7")
projectile_scene = ExtResource("2_jhcl7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_e30mu")
animation = &"Aggressive Idle"
autoplay = "Aggressive Idle"

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(8, 0)
collision_mask = 5

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-8, 0)
collision_mask = 5

[node name="HeadHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="HeadHitbox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_0pvn7")

[node name="PlayerDontSinkDeep" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_4q1e0")

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(0, 8)
collision_mask = 5

[node name="Timer" type="Timer" parent="."]
process_callback = 0
autostart = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="body_entered" from="HeadHitbox" to="." method="_on_head_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
